feat: 메뉴 조회 기능 (#23)